# PraBorrow

./: .gitignore  .gitmodules  AGENT_RULES.md  Cargo.toml  README.md  README_ID.md  check_code.txt  check_code_2.txt  check_code_3.txt  check_deps.txt  check_output.txt  debug_lease.ps1  debug_lease.txt  debug_panic.ps1  debug_panic.txt  deny.toml  error.txt  error_defense.txt  release_failure.txt  release_failure_2.txt  test_log.txt  test_output.txt
.agent/rules/: rust-programmer.md
.github/workflows/: ci.yml
crates/praborrow/: Cargo.toml  README.md
crates/praborrow-bindings/: Cargo.toml  README.md  pyproject.toml
crates/praborrow-bindings/src/: lib.rs
crates/praborrow-core/: Cargo.toml
crates/praborrow-core/src/: lib.rs  sovereign.rs  traits.rs
crates/praborrow-dart/: Cargo.toml  flutter_rust_bridge.yaml
crates/praborrow-dart/src/: api.rs
crates/praborrow-defense/: Cargo.toml
crates/praborrow-defense/src/: lib.rs
crates/praborrow-defense/tests/: constitution_test.rs
crates/praborrow-diplomacy/: Cargo.toml
crates/praborrow-diplomacy/src/: lib.rs  traits.rs
crates/praborrow-diplomacy/tests/: sidl_test.rs
crates/praborrow-lease/: Cargo.toml
crates/praborrow-logistics/: Cargo.toml
crates/praborrow-logistics/src/: lib.rs  pipeline.rs  raw.rs  transport.rs
crates/praborrow-logistics/tests/: logistics_test.rs  networking_test.rs
crates/praborrow-macros/: Cargo.toml
crates/praborrow-macros/src/: lib.rs
crates/praborrow-sidl/: Cargo.toml
crates/praborrow-wasm/: Cargo.toml  jsr.json  package.json
crates/praborrow-wasm/src/: lib.rs
crates/praborrow/benches/: constitution_bench.rs
crates/praborrow/examples/: distributed_bank.rs  manifesto.rs
crates/praborrow/src/: error.rs  lib.rs  telemetry.rs
crates/prb-cli/: Cargo.toml
crates/prb-cli/src/: main.rs
docs/: RFC_001_DEADLOCK_DETECTION.md
xtask/: Cargo.toml
xtask/src/: main.rs  publish.rs
