[workspace]
members = [
    "crates/praborrow-core",
    "crates/praborrow-defense",
    "crates/praborrow-logistics",
    "crates/praborrow-diplomacy",
    "crates/praborrow-lease",
    "crates/praborrow-sidl",
    "crates/praborrow-macros",
    "crates/praborrow-prover",
    "crates/praborrow-wasm",
    "crates/praborrow-bindings",
    "crates/praborrow-dart",
    "crates/praborrow",
    "xtask", "crates/prb-cli",
]
resolver = "2"

[workspace.package]
version = "1.2.3"
edition = "2024"
authors = ["ireddragonicy"]
license = "MIT"
repository = "https://github.com/ireddragonicy/PraBorrow"

# ============================================================================
# WORKSPACE DEPENDENCIES
# ============================================================================
# Centralized dependency management for consistent versions across all crates
[workspace.dependencies]
# Internal crates (default-features = false for flexibility)
praborrow-core = { path = "crates/praborrow-core", version = "1.1.3", default-features = false }
praborrow-defense = { path = "crates/praborrow-defense", version = "1.1.3" }
praborrow-logistics = { path = "crates/praborrow-logistics", version = "1.1.3" }
praborrow-diplomacy = { path = "crates/praborrow-diplomacy", version = "1.1.3" }
praborrow-lease = { path = "crates/praborrow-lease", version = "1.1.3" }
praborrow-sidl = { path = "crates/praborrow-sidl", version = "1.1.3" }
praborrow-macros = { path = "crates/praborrow-macros", version = "1.1.3" }
praborrow-prover = { path = "crates/praborrow-prover", version = "1.1.3", default-features = false }

# Serialization
serde = { version = "1.0.228", default-features = false, features = ["derive", "alloc"] }
serde_json = "1.0"
bincode = "1.3"

# Proc-macro utilities
syn = { version = "2.0.96", features = ["full", "extra-traits"] }
quote = "1.0.38"
proc-macro2 = "1.0.93"

# Error handling
thiserror = { version = "2.0.17", default-features = false }

# Async runtime
tokio = { version = "1.49.0", features = ["macros", "net", "rt", "rt-multi-thread", "sync", "time"] }
async-trait = "0.1"
futures = "0.3"

# Observability
tracing = { version = "0.1", default-features = false, features = ["attributes"] }

# Testing & Benchmarking
criterion = "0.5"
trybuild = "1.0.114"

# Cryptography
sha2 = "0.10"

# Caching

moka = { version = "0.12", features = ["sync"] }

# Storage
redb = "3.1"
sled = "0.34"

# SMT Solver (optional)
z3 = "0.19.7"

# Lazy initialization
lazy_static = "1.4"

# gRPC
tonic = { version = "0.9.2", features = ["tls"] }
prost = "0.11"

# TLS
rustls = "0.23"
tokio-rustls = "0.26"

# Observability
prometheus = "0.14"
opentelemetry = "0.21"
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.14", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.22"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Random
rand = "0.9"

# ============================================================================
# BUILD PROFILES
# ============================================================================

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
split-debuginfo = "unpacked"
opt-level = 0
