[package]
name = "praborrow-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/praborrow-core"
readme = "README.md"
keywords = ["distributed", "ownership", "memory-safety", "systems"]
categories = ["concurrency", "memory-management", "network-programming"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
