[package]
name = "praborrow-defense"
version.workspace = true
edition.workspace = true
description = "Formal verification layer for PraBorrow. Defines the 'Constitution' trait and runtime enforcement of invariant checks."

[dependencies]
praborrow-macros = { path = "../praborrow-macros", version = "0.2.0" }


