[package]
name = "praborrow"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "High-performance distributed systems framework enforcing memory safety with sovereign integrity. Combines strict ownership semantics, procedural invariant checking, and zero-copy logistics."
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/praborrow"
readme = "README.md"
keywords = ["distributed", "framework", "ownership", "memory-safety", "systems"]
categories = ["concurrency", "memory-management", "network-programming"]

[dependencies]
praborrow-core = { path = "../praborrow-core", version = "0.2.0" }
praborrow-defense = { path = "../praborrow-defense", version = "0.2.0" }
praborrow-logistics = { path = "../praborrow-logistics", version = "0.2.0" }
praborrow-diplomacy = { path = "../praborrow-diplomacy", version = "0.2.0" }
praborrow-lease = { path = "../praborrow-lease", version = "0.2.0" }
