[package]
name = "praborrow"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "The PraBorrow framework - A distributed systems framework for Rust"
keywords = ["distributed", "borrow-checking", "systems", "framework"]
categories = ["development-tools", "data-structures"]

[features]
default = ["std", "full"]
full = ["diplomacy", "prover", "sidl"]
diplomacy = ["dep:praborrow-diplomacy"]
prover = ["dep:praborrow-prover"]
sidl = ["dep:praborrow-sidl"]
std = []

[dependencies]
praborrow-core = { workspace = true }
praborrow-defense = { workspace = true }
praborrow-logistics = { workspace = true }
praborrow-lease = { workspace = true }
praborrow-macros = { workspace = true }
thiserror = { workspace = true }
opentelemetry = "0.21"
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-otlp = "0.14"
tracing-opentelemetry = "0.22"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Optional heavy dependencies
praborrow-diplomacy = { workspace = true, optional = true }
praborrow-prover = { workspace = true, optional = true }
praborrow-sidl = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
sha2 = { workspace = true }

[[bench]]
name = "constitution_bench"
harness = false
